# free-claude-code

./: AGENTS.md  CLAUDE.md  pyproject.toml
src/free_claude_code/: __init__.py  config.py
