[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free-claude-code"
version = "0.1.0"
description = "A free, open-source alternative to Claude Code using various LLM backends"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["claude", "llm", "ai", "coding-assistant", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "prompt-toolkit>=3.0.47",
    "gitpython>=3.1.43",
    "pathspec>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
free-claude = "free_claude_code.cli:app"

[project.urls]
Homepage = "https://github.com/Alishahryar1/free-claude-code"
Repository = "https://github.com/Alishahryar1/free-claude-code"
Issues = "https://github.com/Alishahryar1/free-claude-code/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/free_claude_code"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["free_claude_code"]

[tool.mypy]
python_version = "3.11"
# Relaxed strictness for personal use — makes exploration easier
strict = false
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/free_claude_code",
    "--cov-report=term-missing",
    # xml report not needed for local dev, skipping to keep output clean
    "-v",
    # stop after first failure — faster feedback loop when iterating locally
    "-x",
]

[tool.coverage.run]
source = ["src/free_claude_code"]
omit = ["tests/*"]
